--- a/InverterDevice/model.yaml
+++ b/InverterDevice/model.yaml
@@ -754,3 +754,9 @@ InverterDevice:
     - dateLastReported
     - phaseType
   type: object
+  x-derived-from: ""
+  x-disclaimer: 'Redistribution and use in source and binary forms, with or without modification, are permitted  provided that the license conditions are met. Copyleft (c) 2021 Contributors to Smart Data Models Program'
+  x-license-url: https://github.com/smart-data-models/dataModel.Energy/blob/master/InverterDevice/LICENSE.md
+  x-model-schema: https://smart-data-models.github.io/data-models.Energy/InverterDevice/schema.json
+  x-model-tags: ""
+  x-version: 0.0.1
